# ml-inference

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  bench_docker.py  benchmark_remote_2026-03-20.md  config.yaml  docker-compose.yml  inference.proto  inference.py  inference_pb2.py  inference_pb2_grpc.py  load_test.py  main.py  model_def.py  pyproject.toml  report.py  runner.py  server_fastapi.py  server_fastapi_rq.py  server_flask.py  server_grpc.py  server_http.py  train.py  train_catboost.py  train_pytorch.py  vps_performance_actual.md  vps_performance_prediction.md  worker.py
benches/: base.py  concurrency_bench.py  latency_bench.py  throughput_bench.py
benchmarks/: run.py
benchmarks/config/: default.yaml  quick.yaml
benchmarks/harness/: lifecycle.py  monitor.py  payloads.py
benchmarks/metrics/: stats.py
benchmarks/runners/: grpc_runner.py  http_runner.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
compose/: compose.fastapi.yml  compose.fastapi_msgpack.yml  compose.fastapi_queue.yml  compose.go.yml  compose.grpc.yml  docker-compose.yml
model/: __init__.py  model.py  train.py
models/: catboost_model.cbm  pytorch_model.pt
servers/fastapi/: Dockerfile  app.py
servers/fastapi_msgpack/: Dockerfile  app.py
servers/fastapi_queue/: Dockerfile  app.py
servers/go/: Dockerfile  go.mod  main.go
servers/grpc/: Dockerfile  inference.proto  inference_pb2.py  inference_pb2_grpc.py  server.py
services/fastapi_direct/: server.py
services/fastapi_queue/: async_worker.py  inference_task.py  rq_worker.py  server.py
services/grpc/: server.py
