[project]
name = "ml-inference-bench"
version = "0.1.0"
description = "Benchmark and compare three PyTorch serving strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "grpcio",
    "grpcio-tools",
    "httpx",
    "pyyaml",
    "rich",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
