[project]
name = "ml-inference-bench"
version = "0.1.0"
description = "Benchmark and compare three PyTorch serving strategies"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "servers", "benches"]
dependencies = [
    "torch",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "grpcio",
    "grpcio-tools",
    "httpx",
    "msgpack",
    "pyyaml",
    "rich",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
